-
Bug
-
Resolution: Done
-
P2: Important
-
5.6.0
-
None
-
Windows Phone 8.1, Qt 5.6 (git), Visual Studio 2013 (update 3)
-
-
20208225eef2458bc092b91b4e22cc7a5a3d006a 702a98bfb0196c299de047e7f635f0a912b9bb6a
Running the map viewer (and also other location examples) results in the following error:
<code>
QGeoTileRequestManager: Failed to fetch tile (271,148,9) 5 times, giving up. Last error message was: 'Network access is disabled.'
</code>
The "Internet" permission has been added to the Package.appxmanifest. The problem did not exist with the Qt 5.5 release.
- relates to
-
QTBUG-49121 winrt: Networking does not work at all
-
- Closed
-
For Gerrit Dashboard: QTBUG-48738 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
138509,8 | winrt: Enable generic bearer management plugin | 5.6 | qt/qtbase | Status: MERGED | -2 | 0 |