winrt: Enable generic bearer management plugin

Task-number: QTBUG-48738
Change-Id: Ic3698ca1e95aa90083295bf7c41a5f4f66b36f1d
Reviewed-by: Andrew Knight <andrew.knight@intopalo.com>

cregit: 20208225eef2458bc092b91b4e22cc7a5a3d006a https://github.com/qt/qtbase/commit/20208225eef2458bc092b91b4e22cc7a5a3d006a